--- a/test/app/serverless.yml
+++ b/test/app/serverless.yml
@@ -88,6 +88,18 @@ functions:
             template:
               application/json: >
                 { "body" : $input.json('$') }
+
+  post_with_payload_and_template_without_any_function:
+    handler: handler.post_with_payload_and_template_without_any_function
+    events:
+      - http:
+          method: post
+          integration: lambda
+          path: post_with_payload_and_template_without_any_function
+          request:
+            template:
+              application/json: >
+                { "action" : "trigger" }
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
